# frame

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  package-lock.json  package.json  render.yaml
apps/control-plane/: Cargo.toml  wrangler.local.toml  wrangler.toml
apps/control-plane/contract-migrations/: 0032_media_job_inputs_enforce.sql  0033_r2_multipart_claims_enforce.sql
apps/control-plane/migrations/: 0001_initial.sql  0002_identity_expand.sql  0003_organizations_collaboration_expand.sql  0004_upload_storage_outbox_expand.sql  0005_developer_ledger_expand.sql  0006_etl_cutover_expand.sql  0007_native_worker_protocol.sql  0008_repository_query_indexes.sql  0009_auth_repository_expand.sql  0010_organization_authority_expand.sql  0011_business_authority_expand.sql  0012_scoped_cutover_controls.sql  0013_storage_governance_runtime.sql  0014_media_service_runtime.sql  0015_api_workflow_replay.sql  0016_business_authority_enforce.sql  0017_business_document_enforce.sql  0018_business_event_enforce.sql  0019_business_lifecycle_enforce.sql  0020_business_integrity_view.sql  0021_repository_business_outbox_compat.sql  0022_public_collaboration_runtime.sql  0023_auth_oauth_direct_upload.sql  0024_instant_finalize_runtime.sql  0025_authenticated_web_actions.sql  0026_legacy_api_execution.sql  0027_media_job_inputs.sql  0028_r2_multipart_part_claims.sql  0029_worker_auth_delivery_handoff.sql  0030_legacy_org_custom_domain_projection.sql  0031_r2_completion_reconciliation.sql  0034_compatibility_rate_limits.sql  0035_instant_finalize_public_share_index.sql  0036_legacy_folder_assignment_expand.sql  0037_legacy_library_placement_expand.sql  0038_legacy_notification_actions_expand.sql  0039_legacy_developer_actions_expand.sql  0040_legacy_membership_actions_expand.sql  0041_legacy_folder_crud_expand.sql  0042_legacy_user_account_expand.sql  (+21 more)
apps/control-plane/queries/: media_job_by_id.sql  native_worker_job_by_id.sql  organization_snapshot.sql  upload_by_id.sql  video_for_mutation.sql  video_page.sql  video_page_after.sql  video_title_apply.sql  video_title_command.sql
apps/control-plane/src/: api_workflow_runtime.rs  auth_repository.rs  auth_repository_conformance.rs  authenticated_web_runtime.rs  browser_web_runtime.rs  business_repository.rs  business_repository_conformance.rs  business_runtime.rs  cloudflare_media.rs  commands.rs  compatibility_rate_limit.rs  contracts.rs  control_plane_ui.rs  cutover_authority.rs  cutover_authority_runtime.rs  instant_finalize_contract.rs  instant_finalize_runtime.rs  legacy_analytics_runtime.rs  legacy_analytics_web_runtime.rs  legacy_collaboration_runtime.rs  legacy_collaboration_web_runtime.rs  legacy_compatibility_runtime.rs  legacy_core_storage_runtime.rs  legacy_core_storage_web_runtime.rs  legacy_desktop_compatibility_runtime.rs  legacy_desktop_compatibility_web_runtime.rs  legacy_desktop_session_runtime.rs  legacy_desktop_session_web_runtime.rs  legacy_developer_actions_runtime.rs  legacy_developer_api_runtime.rs  legacy_developer_api_web_runtime.rs  legacy_developer_web_runtime.rs  legacy_extension_auth_runtime.rs  legacy_extension_auth_web_runtime.rs  legacy_extension_instant_recordings_runtime.rs  legacy_extension_instant_recordings_web_runtime.rs  legacy_folder_assignment_runtime.rs  legacy_folder_crud_runtime.rs  legacy_folder_crud_web_runtime.rs  legacy_folder_web_runtime.rs  (+58 more)
apps/control-plane/tests/: cutover_authority_v1.rs  same_origin_routing_v1.rs
apps/desktop/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/capabilities/: main.json
apps/desktop/permissions/: desktop.toml
apps/desktop/src/: accessibility.rs  av_settings.rs  gstreamer_bootstrap.rs  instant_finalize.rs  instant_finalize_service.rs  ipc.rs  lib.rs  macos_native_backend.rs  main.rs  migration.rs  native_backend.rs  rooted_io.rs  runtime.rs  surface.rs  windows_native_backend.rs  workflow.rs
apps/desktop/tests/: fake_desktop_journey.rs
apps/desktop/ui/: Cargo.toml  Trunk.toml  index.html
apps/media-worker/: Cargo.toml  NATIVE_EXECUTOR_V1.md  README.md
apps/media-worker/src/: consumer.rs  main.rs  native.rs  protocol.rs  thumbnail.rs
apps/web/: Cargo.toml  Trunk.toml  hydrate.html
apps/web/src/: authenticated.rs  browser_authenticated.rs  browser_security.rs  config.rs  hydration.rs  lib.rs  main.rs  pages.rs  product.rs  public_ssr.rs  share_player.rs
crates/application/: Cargo.toml
crates/application/src/: api_workflow.rs  backfill.rs  business.rs  cutover.rs  idempotency.rs  identity.rs  legacy_analytics.rs  legacy_collaboration.rs  legacy_compatibility.rs  legacy_core_storage.rs  legacy_desktop_compatibility.rs  legacy_desktop_session.rs  legacy_developer_actions.rs  legacy_developer_api.rs  legacy_extension_auth.rs  legacy_extension_instant_recordings.rs  legacy_folder_assignment.rs  legacy_folder_crud.rs  legacy_invite_lifecycle.rs  legacy_library_detail_reads.rs  legacy_library_id_reads.rs  legacy_library_placement.rs  legacy_membership_actions.rs  legacy_mobile_bootstrap_caps.rs  legacy_mobile_session.rs  legacy_mobile_uploads.rs  legacy_notification_actions.rs  legacy_notification_preferences.rs  legacy_notification_read.rs  legacy_org_custom_domain.rs  legacy_organization_library.rs  legacy_organization_selection.rs  legacy_protected_billing_auth.rs  legacy_protected_integrations.rs  legacy_protected_media.rs  legacy_space_authorization.rs  legacy_theme.rs  legacy_transcripts.rs  legacy_upload_storage.rs  legacy_user_account.rs  (+10 more)
crates/application/tests/: business_data_v1.rs  (+3 more)
crates/authenticated-client/: Cargo.toml
crates/domain/: Cargo.toml
crates/frame-client/: Cargo.toml
crates/macos-av-capture/: Cargo.toml  PROVENANCE.md  README.md  build.rs
crates/macos-screen-capture/: Cargo.toml  PROVENANCE.md  README.md  build.rs
crates/media/: Cargo.toml  build.rs  gstreamer-runtime.json
crates/ui/: Cargo.toml
crates/windows-capture-ffi/: Cargo.toml  README.md
crates/windows-screen-capture/: Cargo.toml  PROVENANCE.md  README.md
crates/windows-secure-spool/: Cargo.toml
(+1591 files in other folders)
