[workspace]
resolver = "2"
members = [
    "apps/control-plane",
    "apps/desktop",
    "apps/desktop/ui",
    "apps/media-worker",
    "apps/web",
    "crates/application",
    "crates/domain",
    "crates/frame-client",
    "crates/media",
    "crates/ports",
]
default-members = [
    "apps/desktop",
    "apps/media-worker",
    "apps/web",
    "crates/application",
    "crates/domain",
    "crates/frame-client",
    "crates/media",
    "crates/ports",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/eng-manager-xyz/frame"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
gstreamer = "0.25.3"
js-sys = "0.3"
leptos = { version = "0.8.20", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.9"
thiserror = "2"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["js", "serde", "v7"] }
url = "2.5.8"
wasm-bindgen = "0.2"
worker = { version = "0.8.5", features = ["d1"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# wasm-bindgen catch wrappers require the externref table that Cargo's strip
# step currently removes. worker-build/wasm-opt still optimize the Worker.
[profile.release.package.frame-control-plane]
strip = false
