[workspace]
resolver = "2"
members = [
    "apps/control-plane",
    "apps/desktop",
    "apps/desktop/ui",
    "apps/media-worker",
    "apps/web",
    "crates/application",
    "crates/authenticated-client",
    "crates/domain",
    "crates/frame-client",
    "crates/macos-screen-capture",
    "crates/media",
    "crates/ports",
    "crates/windows-secure-spool",
]
default-members = [
    "apps/desktop",
    "apps/media-worker",
    "apps/web",
    "crates/application",
    "crates/authenticated-client",
    "crates/domain",
    "crates/frame-client",
    "crates/macos-screen-capture",
    "crates/media",
    "crates/ports",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/eng-manager-xyz/frame"
publish = false

[workspace.dependencies]
aes = { version = "0.8.4", default-features = false, features = ["zeroize"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc", "zeroize"] }
apple-cf = "=0.9.3"
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
core-graphics = "=0.25.0"
gstreamer = "0.25.3"
gstreamer-app = { version = "0.25.2", features = ["v1_20"] }
hmac = "0.12.1"
js-sys = "0.3"
leptos = { version = "0.8.20", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
pbkdf2 = "0.12.2"
ring = "0.17.14"
rustix = { version = "1.1.4", features = ["fs"] }
same-file = "1.0.6"
screencapturekit = "=8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.9"
thiserror = "2"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["js", "serde", "v4", "v7"] }
url = "2.5.8"
wasm-bindgen = "0.2"
wasm-streams = "0.6"
worker = { version = "0.8.5", features = ["d1"] }
zeroize = "1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# wasm-bindgen catch wrappers require the externref table that Cargo's strip
# step currently removes. worker-build/wasm-opt still optimize the Worker.
[profile.release.package.frame-control-plane]
strip = false
