[package]
name = "frame-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frame-client = { path = "../../crates/frame-client" }
js-sys.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
worker.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
