[package]
name = "frame-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frame-client = { path = "../../crates/frame-client" }
futures = "0.3"
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
worker.workspace = true

[lints]
workspace = true
