[package]
name = "frame-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
async-trait.workspace = true
frame-application = { path = "../../crates/application" }
frame-authenticated-client = { path = "../../crates/authenticated-client" }
frame-domain = { path = "../../crates/domain" }
frame-ports = { path = "../../crates/ports" }
frame-client = { path = "../../crates/frame-client" }
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
url.workspace = true
wasm-bindgen.workspace = true
wasm-streams.workspace = true
worker.workspace = true
zeroize.workspace = true

[lints]
workspace = true
