[package]
name = "frame-desktop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
default-run = "frame-desktop"

[features]
default = []
instant-finalize = ["dep:frame-media"]
tauri-app = ["dep:tauri"]
macos-native = [
    "tauri-app",
    "dep:frame-media",
    "dep:frame-macos-av-capture",
    "dep:frame-macos-screen-capture",
    "dep:rustix",
]
windows-native = [
    "tauri-app",
    "dep:frame-media",
    "dep:frame-windows-screen-capture",
    "dep:frame-windows-secure-spool",
]
custom-protocol = ["tauri-app", "tauri/custom-protocol"]

[[bin]]
name = "frame-desktop"
path = "src/main.rs"
required-features = ["tauri-app"]

[dependencies]
frame-client = { path = "../../crates/frame-client" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait.workspace = true
frame-authenticated-client = { path = "../../crates/authenticated-client" }
frame-media = { path = "../../crates/media", optional = true }
reqwest.workspace = true
ring.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri = { version = "=2.11.5", optional = true , features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
frame-macos-av-capture = { path = "../../crates/macos-av-capture", optional = true }
frame-macos-screen-capture = { path = "../../crates/macos-screen-capture", optional = true }
rustix = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
frame-windows-screen-capture = { path = "../../crates/windows-screen-capture", optional = true }
frame-windows-secure-spool = { path = "../../crates/windows-secure-spool", optional = true }

[build-dependencies]
tauri-build = "=2.6.3"

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
