[package]
name = "frame-media-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
frame-media = { path = "../../crates/media" }
gstreamer.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
