[package]
name = "frame-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
frame-domain = { path = "../domain" }
frame-ports = { path = "../ports" }
futures = "0.3"
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
