[package]
name = "frame-authenticated-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
