[package]
name = "frame-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
client = ["dep:reqwest"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, optional = true }

[lints]
workspace = true
