[package]
name = "frame-macos-screen-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
frame-media = { path = "../media" }
ring.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics.workspace = true
screencapturekit.workspace = true

[lints]
workspace = true
