[package]
name = "frame-macos-screen-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
frame-media = { path = "../media" }
ring.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
apple-cf.workspace = true
apple-metal.workspace = true
core-graphics.workspace = true
objc2.workspace = true
objc2-app-kit = { workspace = true, features = [
  "NSBitmapImageRep",
  "NSColor",
  "NSColorSpace",
  "NSCursor",
  "NSImage",
  "NSImageRep",
  "objc2-core-foundation",
] }
objc2-core-foundation = { workspace = true, features = ["alloc", "CFData"] }
objc2-core-graphics = { workspace = true, features = [
  "CGEvent",
  "CGEventSource",
  "CGEventTypes",
  "CGRemoteOperation",
  "libc",
] }
objc2-foundation = { workspace = true, features = ["NSData"] }
screencapturekit.workspace = true

[lints]
workspace = true
