[package]
name = "frame-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
gstreamer.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
