[package]
name = "frame-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
gstreamer.workspace = true
gstreamer-app.workspace = true
ring.workspace = true
same-file.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
frame-windows-secure-spool = { path = "../windows-secure-spool" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
